<resources>
    <string name="app_name">DiaBeFriend</string>
    <string name="action_settings">Settings</string>
    <string name="start_button_name">Start</string>
    <string name="title_activity_start">Let\'s begin!</string>
    <string name="carbohydrates_in_grams">Carbohydrates in grams:</string>
    <string name="carbohydrates_in_grams_hint">100</string>
    <string name="insulin_in_units">Insulin in units:</string>
    <string name="insulin_in_units_hint">10.0</string>
    <string name="sugar_level_in_mgdL">Sugar level before eating, in mg/dL</string>
    <string name="sugar_level_hint">105</string>
    <string name="submit">Submit</string>
    <string name="title_activity_timer">Timer</string>
    <string name="invalid_input_dialog">Invalid input</string>
    <string name="try_again_dialog">Try again!</string>
    <string name="dosage_information_title">Dosage information:</string>
    <string name="dosage_information_button_text">Dosage information</string>
    <string name="information_about_count_down">
        Once you\'ve started your meal, hit the start button.
        You will be reminded to test your sugar level within 2 hours
    </string>
    <string name="time_0">00:00:00</string>
    <string name="running">running…</string>
    <string name="current_measurement_button_name">Current measurement</string>
    <string name="unable_to_start_measurement_title">Unable to start new measurement!</string>
    <string name="existing_measurement_in_the_background">There is already an existing measurement in the background!</string>
    <string name="unable_to_find_current_measurement_title">No measurement is found!</string>
    <string name="no_existing_measurement">There is no measurement available at the moment</string>
    <string name="title_activity_summary">Summary</string>
    <string name="it_is_time">Hey! It\'s time</string>
    <string name="test_your_sugar_level">Test your sugar level!</string>
    <string name="summarize_button_name">Summarize</string>
    <string name="sugar_level_after_2hours">Blood sugar level after 2 hours:</string>
    <string name="submit_and_summarize">Submit and summarize</string>
    <string name="information_button_name">Information</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="search_for_products_button_name">Search for products</string>
    <string name="title_activity_search_for_products">SearchForProductsActivity</string>
    <string name="search_for_product_text_view">Search for desired product:</string>
    <string name="completion_hint">Search for product</string>
    <string name="enter_weight_in_grams">Enter the weight of your product/meal in grams \n(100 is default weight when no input is given)</string>
    <string name="choice_hint">Banana</string>
    <string name="weight_in_grams_hint">253</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_measurement">Measurement and alarm</string>
    <string name="title_search">Search for product</string>
    <string name="title_notifications">Notifications</string>
    <string name="application_title">DiaBeFriend</string>
    <string name="kCal_string">kCal:</string>
    <string name="fat_string">Fat:</string>
    <string name="carbohydrates_string">Carbohydrates:</string>
    <string name="protein_string">Proteins:</string>
    <string name="no_measurement_found_dialog_title">No measurement found!</string>
    <string name="millis_left_string">millisLeftString</string>
    <string name="end_time_string">endTime</string>
    <string name="preferences_string">preferences</string>
    <string name="measurement_string">measurement</string>
    <string name="progress_bar_status_string">progressBarStatus</string>
    <string name="timer_is_running_string">timerIsRunning</string>
    <string name="countdown_is_finished_string">countdownIsFinished</string>
</resources>
