<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SummaryActivity"
    tools:showIn="@layout/activity_summary">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="144dp"
        android:divider="@drawable/empty_linear_layout_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/dosageInformationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dosage_information_button_text" />

        <TextView
            android:id="@+id/informationAboutCountdownExistence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/information_about_count_down" />

        <TextView
            android:id="@+id/countdownView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time_0"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <Button
            android:id="@+id/startButtonInSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_button_name" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>