<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.TimerActivity"
    tools:showIn="@layout/activity_timer">

    <Button
        android:id="@+id/summarizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="103dp"
        android:text="@string/summarize_button_name"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/startButtonInSummary"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="236dp"
        android:src="@drawable/ic_play"
        app:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/resetButtonInSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="236dp"
        android:src="@drawable/ic_stop"
        app:backgroundTint="@color/design_default_color_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="434dp"
        android:layout_height="385dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dosageInformationButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/dosage_information_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButtonInSummary" />

    <TextView
        android:id="@+id/informationAboutCountdownExistence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/information_about_count_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dosageInformationButton" />

    <TextView
        android:id="@+id/countdownView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="80dp"
        android:text="@string/time_0"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>